--- a/rail/index.html
+++ b/rail/index.html
@@ -7,6 +7,13 @@
       padding:0px;
       margin:0px;
    }
+   .rail-line {
+    fill: none;
+    stroke: black;
+    stroke-linejoin: round;
+    stroke-width: 1.0;
+}
+
 </style>
 <body>
 <script src="http://d3js.org/d3.v3.min.js"></script>
