Some more tutorials, get multiple rail layers working with leaflet and d3; painfully slow

--- a/rail/index.html
+++ b/rail/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<style>
-   html, body, #test {
-      height:100%;
-      width:100%;
-      padding:0px;
-      margin:0px;
-   }
-   .rail-line {
-    fill: none;
-    stroke: black;
-    stroke-linejoin: round;
-    stroke-width: 1.0;
-}
 
-</style>
+<html>
+<head>
+    <meta charset="utf-8">
+    <style>
+        html, body {
+            height:100%;
+            width:100%;
+            padding:0px;
+            margin:0px;
+        }
+        body {
+            margin: 0;
+            font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 12px;
+            overflow: hidden;
+            background-color: #ddd;
+        }
+        .rail-line {
+            fill: none;
+            stroke: black;
+            stroke-linejoin: round;
+            stroke-width: 1.0;
+        }
+    </style>
+    <title>Rail Layers with d3 and Leaflet</title>
+</head>
+
 <body>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
 <script src="rail.js"></script>
 </body>
 </html>
-
