--- a/rail/index.html
+++ b/rail/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <style>
-        html, body {
+        @import url(http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css);
+        html, body, #map {
             height:100%;
             width:100%;
             padding:0px;
@@ -20,15 +21,19 @@
             fill: none;
             stroke: black;
             stroke-linejoin: round;
-            stroke-width: 1.0;
+            stroke-width: 4.0;
         }
     </style>
-    <title>Rail Layers with d3 and Leaflet</title>
+    <title>North American Rail with d3 and Leaflet</title>
 </head>
 
 <body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="http://d3js.org/topojson.v1.min.js"></script>
-<script src="rail.js"></script>
+    <div id="map"></div>
+
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script src="rail2.js"></script>
 </body>
 </html>
