Correct some problems in interline parsing, flesh out Makefile

--- a/tutorials/geo_leaflet/index.html
+++ b/tutorials/geo_leaflet/index.html
@@ -7,7 +7,7 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <!--<script src="na-rail-nodes.js"></script>-->
-    <script src="world-ports.js"></script>
+    <script src="na-rail-interlines.geojson"></script>
   <style>
     @import url(http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css);
     html, body, #map {
@@ -35,11 +35,11 @@
 
     function onEachFeature(feature, layer) {
         if (feature.properties) {
-                layer.bindPopup("<strong>Name</strong>: "+feature.properties.PORT_NAME+"<br /><strong>Country</strong>: "+feature.properties.COUNTRY);
+                layer.bindPopup("<strong>Link</strong>: " + feature.properties.namea + " (" + feature.properties.wa + ")&ndash;" + feature.properties.nameb + " (" + feature.properties.wb + ")<br /><strong>Impedance</strong>: "+feature.properties.impedance);
         }
     }
 
-    var ports = new L.geoJson(ports, {
+    var interlines = new L.geoJson(interlines, {
         onEachFeature: onEachFeature
     }).addTo(map);
 </script>
