Walmart warehouses importing

--- a/etc/data/warehouses/walmart/walmart.html
+++ b/etc/data/warehouses/walmart/walmart.html
@@ -4931,9 +4931,7 @@ if ( (hwndPopup_27b5 == null) || hwndPopup_27b5.closed ) {
 									6087/6271</P>
 								</TD>
 								<TD STYLE="border-top: none; border-bottom: 1px solid #808080; border-left: 1px solid #808080; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-									<P STYLE="margin-bottom: 0in"><A NAME="Cell2983"></A>Royal
-									Industrial Park, Edificio 5, Road 869 KM 1.5 Barrio Palmas,
-									Catano, PR, 00968</P>
+									<P STYLE="margin-bottom: 0in"><A NAME="Cell2983"></A>Royal Industrial Park, Catano, PR, 00968</P>
 								</TD>
 								<TD STYLE="border-top: none; border-bottom: 1px solid #808080; border-left: 1px solid #808080; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
 									<P ALIGN=RIGHT STYLE="margin-bottom: 0in"><A NAME="Cell2982"></A>
