Nginx tuning, trying to get gzipped json out

--- a/root/index.html
+++ b/root/index.html
@@ -35,9 +35,9 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
-    <script src="lib/leaflet-hash.js"></script>
-    <script src="lib/TileLayer.d3_geoJSON.js"></script>
+    <script src="/js/lib/leaflet-hash.js"></script>
+    <script src="/js/lib/TileLayer.d3_geoJSON.js"></script>
     <script src="http://d3js.org/d3.geo.tile.v0.min.js"></script>
-    <script src="rail3.js"></script>
+    <script src="/js/rail3.js"></script>
 </body>
 </html>
