Add tile vectors for all layers

--- a/root/index.html
+++ b/root/index.html
@@ -39,5 +39,6 @@
     <script src="/js/lib/TileLayer.d3_geoJSON.js"></script>
     <script src="http://d3js.org/d3.geo.tile.v0.min.js"></script>
     <script src="/js/rail3.js"></script>
+    <!--<script src="/js/rail5.js"></script>-->
 </body>
 </html>
