Styles for interline

--- a/root/index.html
+++ b/root/index.html
@@ -24,6 +24,12 @@
             stroke-linejoin: round;
             stroke-width: 4.0;
         }
+        path.rail-interline {
+            fill: red;
+            stroke: black;
+            stroke-linejoin: round;
+            stroke-width: 4.0;
+        }
     </style>
     <title>North American Rail with d3 and Leaflet</title>
 </head>
