Make sure styles are applied

--- a/root/index.html
+++ b/root/index.html
@@ -25,8 +25,8 @@
             stroke-width: 4.0;
         }
         path.rail-interline {
-            fill: red;
-            stroke: black;
+            fill: orange;
+            stroke: orange;
             stroke-linejoin: round;
             stroke-width: 4.0;
         }
