--- a/root/index.html
+++ b/root/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <style>
-        @import url(http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css);
+        /* @import url(http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css); */
+        @import url(/js/lib/leaflet/leaflet.css);
         html, body, #map {
             height:100%;
             width:100%;
@@ -38,13 +39,14 @@
     <div id="map"></div>
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
+    <!--<script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>-->
+    <script src="/js/lib/leaflet/leaflet.js"></script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
     <script src="/js/lib/leaflet-hash.js"></script>
     <script src="/js/lib/TileLayer.d3_geoJSON.js"></script>
     <script src="http://d3js.org/d3.geo.tile.v0.min.js"></script>
-    <script src="/js/rail3.js"></script>
-    <!--<script src="/js/rail5.js"></script>-->
+    <!--<script src="/js/rail3.js"></script>-->
+    <script src="/js/rail5.js"></script>
 </body>
 </html>
