--- a/root/index.html
+++ b/root/index.html
@@ -45,6 +45,7 @@
     <script src="http://d3js.org/topojson.v1.min.js"></script>
     <script src="/js/lib/leaflet-hash.js"></script>
     <script src="/js/lib/TileLayer.d3_geoJSON.js"></script>
+    <script src="/js/lib/TileLayer.custom_d3_geoJSON.js"></script>
     <script src="http://d3js.org/d3.geo.tile.v0.min.js"></script>
     <!--<script src="/js/rail3.js"></script>-->
     <script src="/js/rail5.js"></script>
