--- a/root/index.html
+++ b/root/index.html
@@ -3,51 +3,20 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <style>
-        /* @import url(http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css); */
-        @import url(/js/lib/leaflet/leaflet.css);
-        html, body, #map {
-            height:100%;
-            width:100%;
-            padding:0px;
-            margin:0px;
-        }
-        body {
-            margin: 0;
-            font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 12px;
-            overflow: hidden;
-            background-color: #ddd;
-        }
-        path { stroke-linejoin; round; stroke-linecap: round; fill: none; }
-        path.rail-line {
-            fill: none;
-            stroke: black;
-            stroke-linejoin: round;
-            stroke-width: 4.0;
-        }
-        path.rail-interline {
-            fill: orange;
-            stroke: orange;
-            stroke-linejoin: round;
-            stroke-width: 4.0;
-        }
-    </style>
-    <title>North American Rail with d3 and Leaflet</title>
+    <link rel="stylesheet" href="/css/el.css" type="text/css" />
+    <title>Empire Logistics</title>
 </head>
 
 <body>
     <div id="map"></div>
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <!--<script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>-->
-    <script src="/js/lib/leaflet/leaflet.js"></script>
+    <script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
     <script src="/js/lib/leaflet-hash.js"></script>
-    <script src="/js/lib/TileLayer.d3_geoJSON.js"></script>
     <script src="/js/lib/TileLayer.custom_d3_geoJSON.js"></script>
     <script src="http://d3js.org/d3.geo.tile.v0.min.js"></script>
-    <!--<script src="/js/rail3.js"></script>-->
-    <script src="/js/rail5.js"></script>
+    <script src="/js/el.js"></script>
 </body>
 </html>
