--- a/root/index.html
+++ b/root/index.html
@@ -3,6 +3,11 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/el.css" type="text/css" />
     <title>Empire Logistics</title>
 </head>
@@ -10,13 +15,15 @@
 <body>
     <div id="map"></div>
 
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script src="//code.jquery.com/jquery-latest.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <script src="//cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
+    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script src="//d3js.org/topojson.v1.min.js"></script>
     <script src="/js/lib/leaflet-hash.js"></script>
     <script src="/js/lib/TileLayer.custom_d3_geoJSON.js"></script>
-    <script src="http://d3js.org/d3.geo.tile.v0.min.js"></script>
+    <script src="//d3js.org/d3.geo.tile.v0.min.js"></script>
+    <script src="/js/lib/d3-bootstrap.min.js"></script>
     <script src="/js/el.js"></script>
 </body>
 </html>
